[gd_scene load_steps=3 format=3 uid="uid://85exrjdcr6l7"]

[ext_resource type="Script" path="res://Level/LevelScenes/FoundryMenu/FoundryMenu.gd" id="1_y726f"]
[ext_resource type="Script" path="res://Level/LevelScenes/FoundryMenu/InformationPanel.gd" id="3_uf201"]

[node name="FoundryMenu" type="Node" node_paths=PackedStringArray("column", "selection_panel")]
script = ExtResource("1_y726f")
column = NodePath("Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/PanelContainer/ScrollContainer/ItemColumn")
selection_panel = NodePath("Control/PanelContainer/MarginContainer/HBoxContainer/SelectionPanel")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -106.5
offset_right = 85.0
offset_bottom = 106.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Available Items"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ItemColumn" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/PanelContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VSeparator" type="VSeparator" parent="Control/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="SelectionPanel" type="PanelContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer" node_paths=PackedStringArray("info_label", "amount_label", "accept_button", "minus_button", "plus_button")]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("3_uf201")
info_label = NodePath("MarginContainer/VBoxContainer/Info")
amount_label = NodePath("MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/AmountSelector/Amount")
accept_button = NodePath("MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Accept")
minus_button = NodePath("MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/AmountSelector/Minus")
plus_button = NodePath("MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/AmountSelector/Plus")

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/SelectionPanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/SelectionPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Info" type="Label" parent="Control/PanelContainer/MarginContainer/HBoxContainer/SelectionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/SelectionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/SelectionPanel/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/HBoxContainer/SelectionPanel/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Amount"
horizontal_alignment = 1

[node name="AmountSelector" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/SelectionPanel/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Minus" type="Button" parent="Control/PanelContainer/MarginContainer/HBoxContainer/SelectionPanel/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/AmountSelector"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "-"

[node name="Amount" type="Label" parent="Control/PanelContainer/MarginContainer/HBoxContainer/SelectionPanel/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/AmountSelector"]
layout_mode = 2
text = "1"

[node name="Plus" type="Button" parent="Control/PanelContainer/MarginContainer/HBoxContainer/SelectionPanel/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/AmountSelector"]
layout_mode = 2
size_flags_horizontal = 3
text = "+"

[node name="HSeparator" type="HSeparator" parent="Control/PanelContainer/MarginContainer/HBoxContainer/SelectionPanel/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Accept" type="Button" parent="Control/PanelContainer/MarginContainer/HBoxContainer/SelectionPanel/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Accept"

[node name="Close" type="Button" parent="Control/PanelContainer"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "X"

[connection signal="pressed" from="Control/PanelContainer/MarginContainer/HBoxContainer/SelectionPanel/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/AmountSelector/Minus" to="Control/PanelContainer/MarginContainer/HBoxContainer/SelectionPanel" method="_on_minus_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/HBoxContainer/SelectionPanel/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/AmountSelector/Plus" to="Control/PanelContainer/MarginContainer/HBoxContainer/SelectionPanel" method="_on_plus_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/HBoxContainer/SelectionPanel/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/Accept" to="." method="_on_accept_pressed"]
[connection signal="pressed" from="Control/PanelContainer/Close" to="." method="_on_close_pressed"]
